1日2回以上でも追加できる

--- a/index.html
+++ b/index.html
@@ -44,8 +44,13 @@
         <div class="modal-content">
             <span class="close-btn">&times;</span>
             <h3 id="modal-date"></h3>
-            <div id="modal-chore-list"></div>
-            <button id="save-day-btn">保存</button>
+            <div class="modal-chore-adder">
+                <select id="modal-chore-select"></select>
+                <button id="add-day-chore-btn">追加</button>
+            </div>
+            <p><strong>今日やったお手伝い:</strong></p>
+            <ul id="day-chore-list"></ul>
+            <button id="save-day-btn">保存して閉じる</button>
         </div>
     </div>
 
