繰越ポイントと当月獲得ポイントを表示するように変更。ローカルストレージに繰越ポイントデータを保存する機能を追加。

--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
         </div>
 
         <div class="summary-section">
-            <h2>今月の結果</h2>
-            <p>合計ポイント: <span id="total-points">0</span> ポイント</p>
+            <h2>月間サマリー</h2>
+            <p>前月からの繰越: <span id="carried-over-points">0</span> pt</p>
+            <p>当月獲得ポイント: <span id="monthly-points">0</span> pt</p>
+            <p>合計ポイント: <span id="total-points">0</span> pt</p>
             <div class="rate-setting">
-                <input type="number" id="rate-points" value="3"> ポイント = <input type="number" id="rate-yen" value="10"> 円
+                <input type="number" id="rate-points" value="1"> pt =
+                <input type="number" id="rate-yen" value="1"> 円
             </div>
-            <p>お小遣い: <span id="total-yen">0</span> 円</p>
+            <p>合計金額: <span id="total-yen">0</span> 円</p>
         </div>
     </div>
 
